base/02-extern/03-matrix/01-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix
  namespace: matrix
  labels:
    environment: extern
    app: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
  template:
    metadata:
      labels:
        app: matrix
    spec:
      volumes:
        - name: vol
          nfs:
            server: 192.168.213.2
            path: /mnt/data/matrix
      containers:
        - name: matrix
          image:  matrixdotorg/synapse:latest
          volumeMounts:
            - name: vol
              mountPath: /data
          ports:
            - containerPort: 8448
              name: web
