base/02-extern/03-matrix/01-server/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-https
  namespace: matrix
  labels:
    environment: extern
    app: matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.domain.tld`)
      kind: Rule
      services:
        - name: matrix-service
          port: 8448
      middlewares:
        - name: headers
          namespace: traefik
  tls:
    certResolver: default
    options:
      name: tls
      namespace: traefik
